# OpenAutomation

./: README.md
GoogleCalendarHelper/: README.md  class.iCalReader.php  googlecalendar_ical_parser.php
OpenAutomationProject/logo/: readme.txt
arm-deb/: rrdtool_1.4.5-1_armhf.deb
arm-deb/eibd/: bcusdk_0.0.4+nmu18-1_armhf.deb  pthsem_2.0.8-1_armhf.deb
arm-deb/rrdtool/: rrdtool_1.4.5-1_armel.deb  rrdtool_1.4.5-1_armhf.deb
bcusdk/: README
bcusdk/debian/: Makefile.in
bcusdk/initscripts/: README  eibd.default  eibd.init
d0-IEC62056-meter/: iec62056-meter.pl
ebus/: .project
ebus/doc/: config.ods  config_cycle.ods  config_get.ods  config_set.ods  config_vaillant_vws_get.ods  config_vaillant_vws_set.ods  config_wolf_cycle.ods  vaillant_get.csv  vaillant_get_amu.csv  vaillant_get_cal.csv  vaillant_get_ci.csv  vaillant_get_cir2.csv  vaillant_get_cir4.csv  vaillant_get_cir5.csv  vaillant_get_hw.csv  vaillant_get_mv.csv  vaillant_wp_commands.txt
ebus/dump/: dump_ci  (+1 more)
ebusd/: ChangeLog  NEWS  README
ets4tools/: ets4parser.pl
gCal/: README.txt  eibga_to_schaltliste.php  event_to_gCal.php  hole_gCal.php  index.php
knxdmxd/: Makefile.am  Makefile.org  README  configure.ac  knxdmxd  knxdmxd.c  knxdmxd.conf
knxdmxd/debian/: README  README.Debian  changelog  conffiles  control  copyright  files  init.d  knxdmxd.default  knxdmxd.install
knxdmxd/src/: Makefile.am  cue.cc  cue.h  cuelist.cc  cuelist.h  dmxsender.cc  dmxsender.h  fixture.cc  fixture.h  knxdmxd.cc  knxdmxd.cpp  knxdmxd.h  log.cc  log.h  trigger.cc  trigger.h
knxdmxd/testing/: knxdmxd
qHSMon/: Makefile  Makefile.Debug  Makefile.Release  README.de.txt  README.txt  main.cpp  qHSMon.pro  qHSMon.rc  res.qrc  window.cpp  window.h
rsslog/: rsslog.php  rsslog_correct.pl
russconnectd/: russconnectd_0.21-1_i386.deb  russconnectd_0.30-1_i386.deb  russconnectd_0.34-1.dsc  russconnectd_0.34-1_i386.changes  russconnectd_0.34-1_i386.deb
russconnectd/trunk/src/: Makefile.am  main.c
scripts/: install_eibd_tpuart.sh  install_eibd_usb_with_patches.sh  read-within-callback.patch  sendsms.php
sml-meter/: easymeter.pl  sml_meter.pl
(+215 files in other folders)
