## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g\
	 -std=gnu99\
     -lpthread -leibclient

bin_PROGRAMS = russconnectd

russconnectd_SOURCES = \
	main.c

russconnectd_LDFLAGS = 

russconnectd_LDADD = 

